tests/fixtures/invalid/extern_array_concrete_index.gcl
// Extern array indexes must name one of the signature's `Index` binders:
// concrete indexes cannot cross the plugin boundary.
index Maneuver = { Departure, Correction, Insertion };

import plugin "graphcal:demo" as demo {
    fn boost(xs: Velocity[Maneuver]) -> Velocity;
}

node dv: Velocity[Maneuver] = { Maneuver.Departure: 1.0 km/s, Maneuver.Correction: 0.5 km/s, Maneuver.Insertion: 1.5 km/s };
node top: Velocity = demo.boost(@dv);
